assets/style/style.css
body {
    margin: 0;
    padding: 0;
    font-family: sans-serif;
    background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fget.wallhere.com%2Fphoto%2Ftrees-landscape-forest-sea-water-nature-sky-shadow-clouds-airplane-Earth-Tourism-coast-photo-manipulation-world-atmosphere-aerial-view-island-coral-reef-fisheye-lens-tree-ocean-archipelago-islet-1920x1080-px-computer-wallpaper-aerial-photography-atoll-inlet-water-resources-coastal-and-oceanic-landforms-826450.jpg&f=1&nofb=1");
    background-repeat: none;
}

/* Override bootstrap's colors for navbar */
nav {
    background-color: rgba(96, 181, 238, 0.9)
}

.navbar-brand, .dropdown-item, .dropdown-toggle{
    color:  rgb(10, 67, 141);
}

/* Override's bootstrap/s form height for city-search in navbar */
form {
    height: 40px;
}


.dropdown-menu {
    background-color:  rgba(96, 181, 238, 0.9);
}

.dropdown-item:hover {
    background-color:rgb(126, 184, 231);
}

/* Styles opening sentence for first time user */
h3 {
    padding-top: 40px;
    color:  skyblue;
}

h4 {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

/* Weather info containers*/
.weather-info {
    width: 500px;
    text-align: center;
    background-color: rgba(7, 103, 141, 0.9);
    height: 300px;
    margin-top: 50px;
    margin-right: auto;
    margin-left: auto;
}

/* City name and date */
#city-name, #date {
    font-weight: bold;
    color: skyblue;
    text-align: center;
}

/* Date */
#date {
    font-size: large;
    padding-bottom: 25px;
    padding-top: 10px;
}

/* Weather icon */
#icon-image {
    padding-bottom: 25px;
}

/* Forecast boxes */
.forecast-info {
    text-align: center;
    background-color: rgba(7, 103, 141, 0.9);
    height: 250px;
    margin-top: 30px;
    padding-top: 20px;
    padding: 10px;
    margin-right: auto;
    margin-left: 10px;
    margin-bottom: 10px;
}

.forecast-title {
    margin-top: 50px;
    margin-left: 10px;
    margin-right: auto;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: rgba(7, 103, 141, 0.9);
    text-align: center;
}


.forecast-icon {
    margin-bottom: 20px;
}

/* Weather Dash title */
h2, h4, h5 {
    color:  skyblue;
    padding-top: 10px;
    padding-bottom: 10px;
    font-weight: bold;
}

/* Weather-info */
p {
    color: skyblue;
    text-align: center;
}

/* UV classes which change color based on severity */

.favorable {
    border: solid;
    border-color: Green;
    background: green;
}

.moderate {
    border: solid;
    border-color: yellow;
    background: yellow;
}

.severe {
    border: solid;
    border-color: red;
    background: red;
    font-weight: bold;
}

/* Hides anything that adds this class */
.hide {
    display: none;
}

